log
Sat Apr  9 21:30:43 HSP 2022: 
 tests:  0|6
total_score: 0/70
0ad1bf2
Sun Apr 10 18:48:54 HSP 2022: 
 tests:  0|6
total_score: 0/70
24732a8
Sun Apr 10 18:49:34 HSP 2022: 
 tests:  0|6
total_score: 0/70
a2c111d
Sun Apr 10 18:50:13 HSP 2022: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
d0f83f4
Sun Apr 10 19:27:15 HSP 2022: 
 tests:  1|5
total_score: 10/70
8aef015
Sun Apr 10 19:31:17 HSP 2022: 
 hashmap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:10: error: variable 'posicionDelMapa' set but not used [-Werror=unused-but-set-variable]
     long posicionDelMapa, valorHash;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8b5fc6d
Sun Apr 10 19:31:23 HSP 2022: 
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:10: error: variable 'posicionDelMapa' set but not used [-Werror=unused-but-set-variable]
     long posicionDelMapa, valorHash;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
05734e4
Sun Apr 10 19:31:32 HSP 2022: 
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:10: error: variable 'posicionDelMapa' set but not used [-Werror=unused-but-set-variable]
     long posicionDelMapa, valorHash;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
809d712
Sun Apr 10 19:31:40 HSP 2022: 
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:10: error: variable 'posicionDelMapa' set but not used [-Werror=unused-but-set-variable]
     long posicionDelMapa, valorHash;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
85ea26e
Sun Apr 10 19:32:13 HSP 2022: 
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:10: error: variable 'posicionDelMapa' set but not used [-Werror=unused-but-set-variable]
     long posicionDelMapa, valorHash;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ade5ce4
Sun Apr 10 19:32:22 HSP 2022: 
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:10: error: variable 'posicionDelMapa' set but not used [-Werror=unused-but-set-variable]
     long posicionDelMapa, valorHash;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3334ef8
Sun Apr 10 19:32:27 HSP 2022: 
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:10: error: variable 'posicionDelMapa' set but not used [-Werror=unused-but-set-variable]
     long posicionDelMapa, valorHash;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
bae6faa
Sun Apr 10 19:32:42 HSP 2022: 
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:10: error: variable 'posicionDelMapa' set but not used [-Werror=unused-but-set-variable]
     long posicionDelMapa, valorHash;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e2c581a
Sun Apr 10 19:33:07 HSP 2022: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
b0dadfa
Sun Apr 10 19:33:40 HSP 2022: 
 tests:  0|0
9beacb4
Sun Apr 10 19:36:53 HSP 2022: 
 tests:  0|0
5d20661
Sun Apr 10 19:37:06 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3abb52f
Sun Apr 10 19:52:18 HSP 2022: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  0|0
08ea6b1
Sun Apr 10 19:53:05 HSP 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
07787e1
Sun Apr 10 20:25:17 HSP 2022: 
 hashmap.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
 tests:  0|0
6742473
Sun Apr 10 20:25:38 HSP 2022: 
 tests:  0|0
ad23794
Sun Apr 10 20:34:19 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
eb4da87
Sun Apr 10 20:52:18 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
27d3a41
Sun Apr 10 21:15:05 HSP 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
ea3ada2
Sun Apr 10 21:25:17 HSP 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
191603c
Sun Apr 10 21:40:58 HSP 2022: 
 hashmap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
In file included from test.c:4:0:
test.c: In function 'insertMap':
hashmap.c:57:29: error: 'i' may be used uninitialized in this function [-Werror=maybe-uninitialized]
             if (map->buckets[i]->key == NULL || map->buckets[i]->value == NULL)
                             ^
cc1.exe: all warnings being treated as errors
Compilation failed
34aab41
Sun Apr 10 21:42:41 HSP 2022: 
 hashmap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:21: error: unused variable 'i' [-Werror=unused-variable]
     long valorHash, i;
                     ^
cc1.exe: all warnings being treated as errors
Compilation failed
ac7568a
Sun Apr 10 21:42:57 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fdb602b
Sun Apr 10 21:54:40 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:59:30: error: 'i' undeclared (first use in this function)
                 map->buckets[i] = (Pair **) malloc (sizeof(Pair *));
                              ^
hashmap.c:59:30: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
120cdff
Sun Apr 10 21:54:53 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:59:41: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
                 map->buckets[valorHash] = (Pair **) malloc (sizeof(Pair *));
                                         ^
cc1.exe: all warnings being treated as errors
Compilation failed
3b1de40
Sun Apr 10 21:55:11 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:59:41: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
                 map->buckets[valorHash] = (Pair **) malloc (sizeof(Pair **));
                                         ^
cc1.exe: all warnings being treated as errors
Compilation failed
6fb474b
Sun Apr 10 21:55:27 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2b449c4
Sun Apr 10 22:02:31 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:48:37: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
             map->buckets[valorHash] = (Pair **) malloc (sizeof(Pair *));
                                     ^
cc1.exe: all warnings being treated as errors
Compilation failed
c28d05e
Sun Apr 10 22:02:44 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cbbee85
Sun Apr 10 22:03:40 HSP 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
94ae539
Sun Apr 10 22:08:07 HSP 2022: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
fb3cabc
Sun Apr 10 22:20:53 HSP 2022: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
f4d1467
Sun Apr 10 22:23:31 HSP 2022: 
 tests:  0|0
bda9ed0
Sun Apr 10 22:37:57 HSP 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
c681f68
Sun Apr 10 22:40:04 HSP 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
d9cc74e
Sun Apr 10 22:41:02 HSP 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
a323e5c
Sun Apr 10 22:43:22 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
56eb52f
Sun Apr 10 22:50:39 HSP 2022: 
 hashmap.c | 11 ++++-------
 1 file changed, 4 insertions(+), 7 deletions(-)
 tests:  0|0
69277ac
